--- a/Codigo/style.css
+++ b/Codigo/style.css
@@ -1,12 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;400;500&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;1,600&display=swap');
+
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+body {
+    width: 100%;
+    height: 100%;
+}
+
 main {
     background-color: #e4e4e4;
 }
+
+.titulo{
+    font-size: 44px;
+    font-family: 'Monteserrat',sans-serif;
+    font-weight: 600;
+    font-style: italic;
+    text-decoration-line: underline;
+    
+    color: #000000;
+    display: grid;
+    place-items: center;
+    text-shadow: 4px 6px 4px 0px rgba(0, 0, 0, 0.50);
+}
+
+/* Header Inicio */
 
 .barra-de-navegacao {
     background: linear-gradient(#064561, #2b6883);
@@ -15,7 +37,7 @@ main {
     padding: 0.8rem;
 }
 
-.logo-principal{
+.logo-principal {
     margin-left: 1.2rem;
 }
 
@@ -26,7 +48,7 @@ main {
     align-self: center;
 }
 
-.logo span{
+.logo span {
     font-size: medium;
     font-weight: 500;
     text-align: center;
@@ -43,11 +65,18 @@ main {
     justify-content: center;
     align-items: center;
     gap: 1.8rem;
-    font-size: 1rem;
+    list-style: none;
+    font-size: 1.25rem;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
 }
 
 .menu-links li {
-    list-style: none;
+    transition: all 0.5s;
+}
+
+.menu-links li:hover {
+    transform: scale(0.8);
 }
 
 .menu-links li a {
@@ -67,21 +96,19 @@ main {
     color: coral;
 }
 
-#video {
-    width: 405px;
-    height: 400px;
-    border-radius: 1.8rem;
+/* Fim Header */
+
+/* Inicio Main */
+#carousel-home{
+    margin-top:0.5rem;
+    width: 95%;
 }
 
-.apresentacao {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 1.7rem;
-    color: #000000;
-    text-align: center;
-    text-shadow: 4px 6px 4px 0px rgba(0, 0, 0, 0.50);
+.carousel-inner{
+    border-radius: 1rem;
 }
 
-#video-apresentacao {
+.conteudo_principal{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -89,12 +116,80 @@ main {
     gap: 0.5rem;
 }
 
-/* Footer */
+#video {
+    width: 405px;
+    height: 400px;
+    border-radius: 1.8rem;
+}
+
+/* Config Cards */
+.servicos_items {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    place-items: center;
+    gap: 2rem;
+}
+
+figure {
+    display: grid;
+    border-radius: 1rem;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+figure>* {
+    grid-area: 1/1;
+    transition: .4s;
+}
+
+figure figcaption {
+    display: grid;
+    align-items: end;
+    font-family: sans-serif;
+    font-size: 2.3rem;
+    font-weight: bold;
+    color: #0000;
+    padding: .75rem;
+    background: var(--c, #0009);
+    clip-path: inset(0 var(--_i, 100%) 0 0);
+    -webkit-mask:
+        linear-gradient(#000 0 0),
+        linear-gradient(#000 0 0);
+    -webkit-mask-composite: xor;
+    -webkit-mask-clip: text, padding-box;
+    margin: -1px;
+}
+
+figure:hover figcaption {
+    --_i: 0%;
+}
+
+figure:hover img {
+    transform: scale(1.2);
+}
+
+figure img {
+    width: 310px;
+    height: 310px;
+}
+
+@supports not (-webkit-mask-clip: text) {
+    figure figcaption {
+        -webkit-mask: none;
+        color: #fff;
+    }
+}
+
+/* Fim Config Cards */
+
 .conteudo {
     background: linear-gradient(#064561, #2b6883);
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    padding: 1.2rem;
     gap: 0.8rem;
+    font-family: 'Montserrat', sans-serif;
+    font-style: italic;
 }
 
 .conteudo button {
@@ -102,29 +197,51 @@ main {
     margin: auto;
     margin-bottom: .5rem;
     box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.50);
-    width: 100%;
-    background-color: #0E3D83;
-    color: white;
     padding: 0.6rem;
+    width: 100%;
+    background-color: #0c4294;
+    color: white;
     border-color: transparent;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.conteudo span{
+.conteudo span {
     color: rgb(240, 240, 240);
-    margin: 0.5rem 0 0.5rem 0 ;
+    margin: 0.5rem 0 0.5rem 0;
 }
 
+.subtitulo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 28px;
+    color: whitesmoke;
+    font-weight: 500;
+}
+
+.sub-subtitulo {
+    font-size: 20px;
+    display: flex;
+    justify-content: start;
+    align-items: start;
+}
+
+.logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Redes Sociais */
 #footer-socialmedia {
     margin-top: 1.45rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: auto;
-    margin-bottom: auto;
-    gap: 1.15rem; 
+    gap: 1.15rem;
 }
 
 #footer-socialmedia .footer-link {
@@ -135,17 +252,16 @@ main {
     justify-content: center;
     align-items: center;
     text-decoration: none;
-    transition: all 0.4s;
+    transition: all 0.5s;
 }
 
 #footer-socialmedia .footer-link i {
-    font-size: 1.5rem;
+    font-size: 1.9rem;
     color: #DCDCE4;
-
 }
 
 #footer-socialmedia .footer-link :hover {
-    opacity: 55%;
+    opacity: 75%;
 }
 
 #instagram {
@@ -156,52 +272,52 @@ main {
     background: linear-gradient(#3B91EA, #5777EB);
 }
 
-#whatsapp {
-    background: #38B82F;
+#linkedin {
+    background: #0f9dda;
 }
 
-.fale-conosco button{
+/* Fim Redes Sociais */
+
+
+.fale-conosco {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.fale-conosco button {
     margin-top: 0.8rem;
+    width: 75%;
 }
 
 .informacoes-de-contato {
     display: flex;
     flex-direction: column;
-    /* justify-content: center;
-    align-items: center;  */
-}
-
-.contato {
-    font-size: 24px;
-    text-align: center;
-
-}
-
-.sub-subtitulo {
-    font-size: 20px;
-    display: flex;
-    justify-content: start;
-    align-items: start;
+    justify-content: center;
+    align-items: center;
 }
 
 .visita {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.subtitulo {
     display: flex;
+    width: 85%;
     justify-content: center;
     align-items: center;
-    font-size: 28px;
-    color: whitesmoke;
-    font-weight: 450;
+    gap: 0.8rem;
 }
 
-.endereco{
+.endereco {
     font-size: 15px;
 }
 
-#contate {
-    width: 80%;
+.copyright {
+    background-color: #000000;
+    color: whitesmoke;
+    padding: 0.5rem;
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+/* Footer */
