--- a/Codigo/styles/style.css
+++ b/Codigo/styles/style.css
@@ -16,16 +16,29 @@ main {
 }
 
 .titulo{
-    font-size: 44px;
+    font-size: 30px;
     font-family: 'Monteserrat',sans-serif;
     font-weight: 600;
     font-style: italic;
     text-decoration-line: underline;
-    
     color: #000000;
     display: grid;
     place-items: center;
     text-shadow: 4px 6px 4px 0px rgba(0, 0, 0, 0.50);
+}
+
+.subtitulo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    color: whitesmoke;
+    font-weight: 500;
+}
+
+.texto {
+    font-size: 15px;
+    text-align: center;
 }
 
 /* Header Inicio */
@@ -117,8 +130,7 @@ main {
 }
 
 #video {
-    width: 405px;
-    height: 400px;
+    width: 100vh;
     border-radius: 1.8rem;
 }
 
@@ -185,7 +197,7 @@ figure img {
 .conteudo {
     background: linear-gradient(#064561, #2b6883);
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     padding: 1.2rem;
     gap: 0.8rem;
     font-family: 'Montserrat', sans-serif;
@@ -194,13 +206,12 @@ figure img {
 
 .conteudo button {
     border-radius: 0.6rem;
-    margin: auto;
-    margin-bottom: .5rem;
     box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.50);
-    padding: 0.6rem;
-    width: 100%;
-    background-color: #0c4294;
-    color: white;
+    padding: 0.4rem;
+    width: 75%;
+    background-color: #00354D;
+    color: whitesmoke;
+    font-size: 13px;
     border-color: transparent;
     display: flex;
     justify-content: center;
@@ -212,21 +223,39 @@ figure img {
     margin: 0.5rem 0 0.5rem 0;
 }
 
-.subtitulo {
+.fale-conosco {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+
+.informacoes-de-contato {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.visita {
+    display: flex;
+    width: 75%;
+    justify-content: center;
+    align-items: center;
+    gap: 0.8rem;
+}
+
+.copyright {
+    background-color: #000000;
+    color: whitesmoke;
+    padding: 0.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 28px;
-    color: whitesmoke;
-    font-weight: 500;
 }
 
-.sub-subtitulo {
-    font-size: 20px;
-    display: flex;
-    justify-content: start;
-    align-items: start;
-}
 
 .logo {
     display: flex;
@@ -237,7 +266,6 @@ figure img {
 
 /* Redes Sociais */
 #footer-socialmedia {
-    margin-top: 1.45rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -256,7 +284,7 @@ figure img {
 }
 
 #footer-socialmedia .footer-link i {
-    font-size: 1.9rem;
+    font-size: 1.6rem;
     color: #DCDCE4;
 }
 
@@ -264,7 +292,7 @@ figure img {
     opacity: 75%;
 }
 
-#instagram {
+/* #instagram {
     background: linear-gradient(#7f37e9, #ff2992, #ff9807);
 }
 
@@ -274,50 +302,8 @@ figure img {
 
 #linkedin {
     background: #0f9dda;
-}
+} */
 
 /* Fim Redes Sociais */
-
-
-.fale-conosco {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.fale-conosco button {
-    margin-top: 0.8rem;
-    width: 75%;
-}
-
-.informacoes-de-contato {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.visita {
-    display: flex;
-    width: 85%;
-    justify-content: center;
-    align-items: center;
-    gap: 0.8rem;
-}
-
-.endereco {
-    font-size: 15px;
-}
-
-.copyright {
-    background-color: #000000;
-    color: whitesmoke;
-    padding: 0.5rem;
-    font-size: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
 /* Footer */
