--- a/Codigo/styles/style_contato.css
+++ b/Codigo/styles/style_contato.css
@@ -1,46 +1,47 @@
 .conteudo_contato {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 0.8rem;
     padding: 2.7rem;
 }
 
-.conteudo_contato_titulo1 , .mensagens{
+.conteudo_contato a{
+    transition: all 0.32s;
+}
+
+.conteudo_contato a:hover{
+    scale: 1.08;
+}
+
+.conteudo_contato_links {
+    display: flex;
+    flex-direction: column;
+}
+
+.conteudo_contato_links a {
+    text-decoration: none;
+}
+
+.conteudo_contato_titulo {
     font-size: 28px;
     font-weight: 500;
+    text-align: center;
 }
 
-.telefone{
+.whatsapps {
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    
-
-}
-
-.telefone a{
-    background-color: #105ff3;
-    text-decoration: none;
-    padding: 1.5rem;
-    border-radius: 1.3rem;
-    color: aliceblue;
-    
-}
-
-.links, .telefone{
-    display: flex;
-    flex-direction: column;
-}
-
-.whatsapps{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     padding-top: 1.2rem;
     gap: 0.6rem;
 }
 
-.whatsapps a{
-    background-color: #06b615;
+.whatsapps a {
+    background-color: #1f867e;
     padding: 1.5rem;
+    max-width: 55%;
+    min-width: 30%;
     border-radius: 1.3rem;
     display: flex;
     justify-content: center;
@@ -50,50 +51,80 @@
     font-size: 20px;
 }
 
-.whatsapps a i{
+.whatsapps a i {
     font-size: 32px;
 }
 
-.links a{
-    text-decoration: none;
+.telefones {
+    display: flex;
+    flex-direction: row;
+    gap: 0.9rem;
+    align-items: center;
+    justify-content: center;
 }
 
-.envio{
+.telefones a {
+    background-color: #105ff3;
+    text-decoration: none;
+    padding: 1.5rem;
+    border-radius: 1.3rem;
+    color: aliceblue;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.envio_mensagem {
     display: flex;
     flex-direction: column;
     gap: 0.75rem;
 }
 
-.envio_campos{
+.envio_mensagem_campos {
     display: flex;
     flex-direction: column;
     gap: 0.47rem;
 }
 
-.envio_campos div{
+.envio_mensagem_campos div {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.botao_envio{
-    background-color: #17b338;
-    text-decoration: none;
-    color: whitesmoke;
-    text-align: center;
-    padding: 0.7rem;
-    border-radius: 0.5rem;
-    width: 70%;
-    font-size: 20px;
-    font-weight: 450;
-}
-
-.envio_campos input, textarea{
+.envio_mensagem_campos input,
+textarea {
     border-color: transparent;
     border-radius: 0.65rem;
     padding: 0.8rem;
 }
 
-.envio_campos input::placeholder , textarea::placeholder{
+.botao_envio {
+    background-image: linear-gradient(155deg, #06b615, #2d9405, #0c772f);
+    text-decoration: none;
+    color: white;
+    text-align: center;
     padding: 0.8rem;
+    border: none;
+    box-sizing: border-box;
+    border-radius: 1rem;
+    padding: 3px;
+    font-size: 20px;
+    font-weight: 450;
+    box-shadow: 0px 0px 8px 3px rgba(107, 107, 107, 1);
+    display: flex;
+}
+
+.botao_envio span {
+    background-color: #222222;
+    text-align: center;
+    padding: 0.9rem 1.3rem;
+    border-radius: 1rem;
+    transition: 0.3s;
+}
+
+.botao_envio:hover span {
+    background: none;
 }
