--- a/Codigo/styles/style_servicos.css
+++ b/Codigo/styles/style_servicos.css
@@ -1,13 +1,85 @@
-.servicos section{
+.main{
+    width: 100%;
+}
+
+.servicos{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.servicos img{
+
+.imagens_tipo{
     border-radius: 50%;
     object-fit: cover;
     background-color: #7d7d7d;
     width: 16rem;
     height: 16rem;
+}
+
+.servicos_calibracao{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.servicos_titulo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 36px;
+    font-weight: 600;
+}
+
+.calibracao_tipos{
+    border-style:solid ;
+    width: 75vw;
+    height: 500px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    overflow-x: auto;
+}
+
+.calibracao-texto{
+    width: 75vw;
+    padding: 0.75rem 0 ;
+}
+
+.card{
+    box-sizing: border-box;
+  width: 190px;
+  height: 254px;
+  background: rgba(217, 217, 217, 0.58);
+  border: 1px solid white;
+  box-shadow: 12px 17px 51px rgba(0, 0, 0, 0.22);
+  backdrop-filter: blur(6px);
+  border-radius: 17px;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.5s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  user-select: none;
+  font-weight: bolder;
+  color: black;
+}
+
+.card:hover {
+  border: 1px solid black;
+  transform: scale(1.05);
+}
+
+.card:active {
+  transform: scale(0.95) rotateZ(1.7deg);
+}
+
+.servicos_preventiva{
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: start;
 }
