--- a/Codigo/styles/style.css
+++ b/Codigo/styles/style.css
@@ -1,18 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;400;500&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;1,600&display=swap');
 
+:root{
+    --cor-de-fundo:#e4e4e4e4;
+    --fonte-texto:26px;
+    --fonte-geral:'Montserrat', sans-serif;
+    --cor-texto:whitesmoke;
+    --cor-titulo:black;
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-body {
+body{
     width: 100%;
-    height: 100%;
 }
 
 main {
-    background-color: #e4e4e4;
+    background-color: var(--cor-de-fundo);
+    padding-bottom: 2rem;
 }
 
 .titulo{
@@ -21,7 +29,7 @@ main {
     font-weight: 600;
     font-style: italic;
     text-decoration-line: underline;
-    color: #000000;
+    color: var(--cor-titulo);
     display: grid;
     place-items: center;
     text-shadow: 4px 6px 4px 0px rgba(0, 0, 0, 0.50);
@@ -38,22 +46,32 @@ main {
 
 .texto {
     font-size: 15px;
+    color: whitesmoke;
     text-align: center;
 }
 
+span,h1,h2,h3,h4,h5,h6,p,input{
+    font-family: var(--fonte-geral);
+}
 
 /* Header Inicio */
 
 .barra-de-navegacao {
-    background: linear-gradient(#064561, #2b6883);
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    /* background: linear-gradient(#064561, #2b6883); */
+    /* position:absolute; */
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 1;
     padding: 0.8rem;
 }
 
 .logo-cabecalho{
-    display: grid;
-    place-items: center;
+    /* display: grid;
+    place-items: center; */
+    margin-left: 1.3rem;
 }
 
 .nav-bar {
@@ -63,14 +81,13 @@ main {
 
 .menu-links {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     gap: 1.8rem;
     list-style: none;
     font-size: 1.25rem;
-    font-family: 'Inter', sans-serif;
     font-weight: 400;
-    margin: 0;
 }
 
 .menu-links li {
@@ -85,6 +102,9 @@ main {
     text-decoration: none;
     color: aliceblue;
     white-space: nowrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .usuario {
@@ -107,30 +127,54 @@ main {
 .conteudo_principal{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     gap: 0.5rem;
 }
 
 #carousel-home{
-    margin-top:0.5rem;
-    width: 95%;
+    /* margin-top:0.5rem;
+    width: 95%; */
 }
 
 .carousel-inner{
-    border-radius: 1rem;
+    /* border-radius: 1rem; */
 }
 
-#video {
+#video{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    padding: 2rem 0;
+}
+
+#video-apresentacao {
     width: 100vh;
     border-radius: 1.8rem;
 }
 
+.video__texto{
+    text-align: center;
+    font-size: var(--fonte-texto);
+
+}
+
+button{
+    transition: all 0.4s;
+}
+
+button:hover{
+    scale: 1.08;
+}
+
 /* Config Cards */
 .servicos_items {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    place-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    /* grid-template-columns: repeat(3, 1fr);
+    place-items: center; */
     gap: 2rem;
 }
 
@@ -138,7 +182,6 @@ figure {
     display: grid;
     border-radius: 1rem;
     overflow: hidden;
-    cursor: pointer;
 }
 
 figure>* {
@@ -148,18 +191,17 @@ figure>* {
 
 figure figcaption {
     display: grid;
-    align-items: end;
-    font-family: sans-serif;
+    align-items: center;
+    justify-content: center;
     font-size: 2.3rem;
     font-weight: bold;
-    color: #0000;
+    color: #ffffff;
     padding: .75rem;
-    background: var(--c, #0009);
+    background: var(--c, rgba(4, 68, 97, 0.6));
     clip-path: inset(0 var(--_i, 100%) 0 0);
     -webkit-mask:
         linear-gradient(#000 0 0),
         linear-gradient(#000 0 0);
-    -webkit-mask-composite: xor;
     -webkit-mask-clip: text, padding-box;
     margin: -1px;
 }
@@ -186,10 +228,40 @@ figure img {
 
 /* Fim Config Cards */
 
+#botao_servicos{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.servicos_botao{
+    transform: skew(-21deg);
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 1.5rem;
+    background: #2b6883;
+    transition: all 0.4s;
+}
+
+.servicos_botao:hover{
+    scale: 1.08;
+}
+
+.servicos_botao span{
+    transform: skew(21deg);
+    
+}
+
+.servicos_texto{
+    text-align: center;
+    font-weight: 500;
+}
+
+
 /* Footer Inicio */
 .conteudo {
     background: linear-gradient(#064561, #2b6883);
-    font-family: 'Montserrat', sans-serif;
     font-style: italic;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
