--- a/Codigo/styles/style_orcamento.css
+++ b/Codigo/styles/style_orcamento.css
@@ -1,35 +1,48 @@
+main button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: skew(-21deg);
+}
+
+.orcamento{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .form-orcamento{
-    padding: 0 60vh;
+    width: 60vw;
+}
+
+h1{
+    text-align: center;
 }
 
 .campos{
     display: flex;
-    flex-direction: row;
-}
-
-.campos .labels,.inputs{
- text-align: end;   
- padding: 0.65rem;
- display: flex;
- flex-direction: column;
- gap: 0.9rem;
-}
-
-.campos .inputs{
-    width: 80%;
+    flex-direction: column;
 }
 
 .campos input,textarea{
-    border-radius: 0.6rem;
     border-color: transparent;
-    padding: 5px;
+    margin: 0.4rem 0;
+    line-height: 1.8rem;
     width: 100%;
 }
 
+.campos_juncao{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    /* flex-direction: row; */
+    /* justify-content: space-between; */
+    gap: 2rem;
+}
+
 .campos label{
-    padding-left: 6px 0;
-    font-size: 18px;
-    font-weight: 450;
+    display: flex;
+    flex-direction: row;
 }
 
 .correcao{
@@ -94,9 +107,9 @@
 
 .contato-whatsapps button{
     padding: 1.2rem 1.1rem;
-    background-color: #1f867e;
+    background: #2b6883;
     border: none;
-    border-radius: 1.45rem;
+    border-radius: 0.4rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -117,4 +130,21 @@
 .contato-whatsapps .fa-brands{
     color: white;
     font-size: 2.3rem;
+}
+
+.contato-whatsapps span,.contato-whatsapps i{
+    transform: skew(21deg);
+}
+
+@media screen and (min-width: 450px) and (max-width:720px) {
+    .campos_juncao{
+        display: flex;
+        flex-direction: column;
+    }
+    .contato-whatsapps{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
