--- a/Codigo/styles/style.css
+++ b/Codigo/styles/style.css
@@ -23,6 +23,17 @@ main {
     padding-bottom: 2rem;
 }
 
+#top {
+    display: none;
+    position: fixed;/* Fixed/sticky position */
+    bottom: 20px;/* Place the button at the bottom of the page */
+    right: 30px;/* Place the button 30px from the right */
+    z-index: 99;/* Make sure it does not overlap */
+    font-size: 1.5rem;
+    border: none;
+    background-color: transparent;
+}
+
 .titulo{
     font-size: 30px;
     font-family: 'Monteserrat',sans-serif;
@@ -50,7 +61,7 @@ main {
     text-align: center;
 }
 
-span,h1,h2,h3,h4,h5,h6,p,input{
+span,h1,h2,h3,h4,h5,h6,p,input,a{
     font-family: var(--fonte-geral);
 }
 
@@ -258,6 +269,147 @@ figure img {
     font-weight: 500;
 }
 
+/* Contato */
+
+.conteudo_contato {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0.8rem;
+    padding: 1.4rem;
+}
+
+.conteudo_contato a{
+    transition: all 0.32s;
+    transform: skew(-21deg);
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 1.5rem;
+    background: #2b6883;
+    border-radius: 0.8rem;
+}
+
+.conteudo_contato a span, .conteudo_contato a i{
+    transform: skew(21deg);
+}
+
+.conteudo_contato a:hover{
+    scale: 1.08;
+}
+
+.conteudo_contato_links {
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+}
+
+.conteudo_contato_links a {
+    text-decoration: none;
+}
+
+.conteudo_contato_titulo {
+    font-weight: 500;
+    text-align: center;
+}
+
+.whatsapps {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 0.8rem;
+}
+
+.whatsapps a {
+    width: 13rem;
+    height: 4rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: whitesmoke;
+    gap: 0.65rem;
+}
+
+.whatsapps a i {
+    font-size: 32px;
+}
+
+.telefones {
+    display: flex;
+    flex-direction: row;
+    gap: 0.9rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.telefones a {
+    text-decoration: none;
+    padding: 1.5rem;
+    color: aliceblue;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.envio_mensagem {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+}
+
+.envio_mensagem_campos {
+    display: flex;
+    flex-direction: column;
+    gap: 0.47rem;
+}
+
+.envio_mensagem_campos div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.envio_mensagem_campos input,
+textarea {
+    border-color: transparent;
+    border-radius: 0.65rem;
+    padding: 0.8rem;
+}
+
+.botao_envio {
+    /* background-image: linear-gradient(155deg, #06b615, #2d9405, #0c772f); */
+    background-color: #004768;
+    text-decoration: none;
+    color: white;
+    text-align: center;
+    padding: 0.8rem;
+    border: none;
+    box-sizing: border-box;
+    border-radius: 1rem;
+    padding: 3px;
+    font-size: 20px;
+    font-weight: 450;
+    box-shadow: 0px 0px 8px 3px rgba(107, 107, 107, 1);
+    display: flex;
+}
+
+.botao_envio span {
+    background-color: #222222;
+    text-align: center;
+    padding: 0.9rem 1.3rem;
+    border-radius: 1rem;
+    transition: 0.3s;
+}
+
+.botao_envio:hover span {
+    background: none;
+}
+
+/* Fim Contatos */
+
 
 /* Footer Inicio */
 .conteudo {
@@ -356,3 +508,65 @@ figure img {
 }
 
 /* Footer */
+
+@media screen and (min-width: 456px) and (max-width:720px) {
+    .conteudo {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+    }
+}
+
+/* Pagina Sobre */
+
+/* Fim Pagina Sobre */
+
+/* Pagina Politicas*/
+.titulo-sac{
+    padding-top: 1.2rem;
+    text-align: center;
+}
+
+.dados-pessoais{
+    display: flex;
+    flex-direction: column;
+    gap: 0.3rem;
+    padding: 0px 15rem;
+    line-height: 1.5rem;
+}
+
+.dados-pessoais .agrupamento{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 5.31rem;
+}
+
+.dados-pessoais .agrupamento div{
+    display: flex;
+    flex-direction: column;
+
+}
+
+.dados-pessoais input, select{
+    border-radius: 0.4rem;
+    border-color: transparent;
+}
+
+.dados-pessoais button{
+    border-radius: 0.6rem;
+    box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.50);
+    padding: 0.4rem;
+    margin: 0 15rem;
+    background-color: #017e4a;
+    color: whitesmoke;
+    font-size: 13px;
+    border-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+}
+
+/*Fim Pagina Politicas*/
