--- a/Codigo/styles/style_somos.css
+++ b/Codigo/styles/style_somos.css
@@ -16,17 +16,30 @@ p{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     place-items: center;
-    
+    justify-items: center;
+    align-items: start;
+}
+
+.valores div{
+    display: flex;
+    flex-direction: column;
+}
+
+.valores span{
+    text-align: center;
+    font-weight: 550;
+    font-size: 20px;
+    text-decoration:overline;
 }
 
 .certificacoes{
     display: grid;
     grid-template-columns: 2fr 1fr;
+    place-items: center;
 }
 
 .certificacoes_img{
-    width: 100%;
-    height: 100%;
+    width: 16rem;
 }
 
 .certificacoes_texto{
