--- a/Codigo/styles/style.css
+++ b/Codigo/styles/style.css
@@ -897,33 +897,37 @@ h1{
     }
 
     .barra-de-navegacao {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: baseline;
-        align-items: center;
+        display: grid;
+        grid-template-columns: 3fr 1fr;
         z-index: 1;
-        padding: 0.8rem;
+        padding: 0.3rem;
+    }
+
+    .logo-cabecalho{
+        display: flex;
+        margin: 0 0 0 auto;
     }
 
     .mobile-menu{
         display: block;
         cursor: pointer;
+        margin-right: 0;
+        margin-left: auto;
     }
 
     .menu-links{
         display: none;
         transition: all 1s;
         transform: fadeout 0.5s;
-        transition: all .275s .1s;
     }
 
     .menu-links.is-open {
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         bottom: 0;
         right: 0;
+        height: 100vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -950,6 +954,27 @@ h1{
     }
 
     #carousel-home{
+        display: none;
+    }
+
+    .whatsapps{
+        display: grid;
+    }
+
+    figure img{
+        width: 17rem;
+        height: 17rem;
+    }
+
+    .servicos_botao{
+        padding: 1.1rem 0.5rem;
+    }
+
+    .telefones{
+        display: grid;
+    }
+
+    .whatsapps-expedicao, .whatsapps-planejamento{
         display: none;
     }
 
