--- a/Codigo/styles/style.css
+++ b/Codigo/styles/style.css
@@ -517,7 +517,7 @@ select {
     border-radius: 0.6rem;
     box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.50);
     padding: 0.4rem;
-    margin: 0 15rem;
+    width: 25rem;
     background-color: var(--cor-botoes);
     color: whitesmoke;
     font-size: 13px;
@@ -526,6 +526,10 @@ select {
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
+}
+
+.envia-sac{
+    margin: 0 auto 0 auto;
 }
 
 /*Fim Pagina SAC*/
@@ -667,8 +671,6 @@ h1{
 .contato-whatsapps span,.contato-whatsapps i{
     transform: skew(21deg);
 }
-
-
 /*FIM ORÇAMENTOS*/
 
 /* PAGINA SERVIÇOS */
@@ -825,7 +827,7 @@ h1{
 
 /* FIM PAGINA SERVIÇOS */
 
-@media screen and (min-width: 320px) and (max-width:720px) {
+@media screen and (min-width: 320px) and (max-width:720px) {    
     #video {
         flex-direction: column;
     }
@@ -910,15 +912,18 @@ h1{
 
     .mobile-menu{
         display: block;
+        right: 0;
         cursor: pointer;
         margin-right: 0;
         margin-left: auto;
+        z-index: 1000;
     }
 
     .menu-links{
         display: none;
         transition: all 1s;
         transform: fadeout 0.5s;
+        z-index: 999;
     }
 
     .menu-links.is-open {
@@ -943,14 +948,14 @@ h1{
         font-weight: 450;
     }
 
+    .menu-links li:focus{
+        transform: scale(0.8);
+    }
+
     #close{
         display: none;
         position: relative;
         z-index: 100;
-    }
-
-    .menu-links li:focus{
-        transform: scale(0.8);
     }
 
     #carousel-home{
@@ -976,6 +981,22 @@ h1{
 
     .whatsapps-expedicao, .whatsapps-planejamento{
         display: none;
+    }
+
+    /* Configuração SAC */
+    .dados-pessoais{
+        padding: 0;
+        margin: 0.9rem;
+    }
+    
+    .dados-pessoais .agrupamento{
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 0.3rem;
+    }
+
+    .dados-pessoais button{
+        width: 18rem;
     }
 
     @keyframes fadein {
