--- a/Codigo/styles/styles.css
+++ b/Codigo/styles/styles.css
@@ -3,8 +3,8 @@
 :root {
     --cor-de-fundo: #eeee;
     --fonte-geral: 'Arial', sans-serif;
-    --tamanho-texto:18px;
-    --tamanho-titulo:32px;
+    --tamanho-texto:26px;
+    --tamanho-titulo:36px;
     --cor-titulo: black;
     --cor-botoes:#176B87;
     --cor-letras:aliceblue;
@@ -81,6 +81,13 @@ button,a{
     text-align: center;
 }
 
+/*Reveal function*/
+.video__texto, 
+.card1, 
+.card2, 
+.card3{
+    visibility: hidden;
+}
 
 /* Header Inicio */
 #top {
@@ -294,6 +301,7 @@ button,a{
 }
 
 #video-apresentacao {
+    max-width: 38rem;
     width: 80%;
     border-radius: 1.8rem;
 }
@@ -357,8 +365,8 @@ figure:hover img {
 }
 
 figure img {
-    width: 22rem;
-    height: 22rem;
+    width: 20rem;
+    height: 17rem;
 }
 
 @supports not (-webkit-mask-clip: text) {
@@ -917,6 +925,7 @@ span,p, li{
     display: inline-block;
 }
 /*FIM PAGINA POLITICAS*/
+
 
 @media screen and (min-width: 320px) and (max-width:720px) {    
     #video {
